tests/error/type_errors/call_unexpected_arg.py
from guppylang.decorator import guppy


@guppy
def foo(x: int) -> int:
    return foo(x, x)


guppy.compile(foo)
